# fine-tune-function-gemma

./: .env.example  .gitignore  README.md  generation_design.md  pyproject.toml
.jupyter/config/: migrated
config/: settings.yaml
data/formatted/: clarification.jsonl  final_dataset.jsonl  multi_turn.jsonl  no_tool.jsonl  single_turn.jsonl
data/raw/combined/: clarification.jsonl  final_dataset.jsonl  multi_turn.jsonl  no_tool.jsonl  single_turn.jsonl
data/raw/multi_turn/: ambiguous_beneficiary_account_then_transfer.jsonl  ambiguous_beneficiary_account_then_transfer.jsonl.rejected  missing_bank_code.jsonl  missing_bank_code.jsonl.rejected  single_matching_beneficiary_then_transfer.jsonl  transfer_then_offer_save_beneficiary.jsonl  transfer_then_offer_save_beneficiary.jsonl.rejected
data/splits/: test.jsonl  train.jsonl  val.jsonl
docs/: flutter_gemma_banking_functiongemma.md
notebooks/: convert_functiongemma_to_flutter_gemma.ipynb  fine_tune_function_gemma.ipynb  run_functiongemma_model.ipynb  use_functiongemma_with_flutter_gemma.ipynb
prompts/language_style/: vietnamese_user_style.md
reports/: last_claude_response.txt
scenarios/multi_turn/ambiguous_beneficiary_account_then_transfer/: examples.jsonl  prompt.txt  scenario.yaml
scenarios/multi_turn/missing_bank_code/: examples.jsonl  prompt.txt  scenario.yaml
scripts/: generate.sh
src/: __init__.py  combine.py  common.py  format.py  generate.py  split.py
src/formatting/: __init__.py
src/generator/: __init__.py  claude_client.py  scenario.py
src/tools/: __init__.py  banking.py
src/validation/: __init__.py  rules.py
tests/: test_beneficiary_account_selection.py  test_recent_transactions_time_period.py
(+25 files in other folders)
